--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,9 @@ body {
   min-width: 1075px;
   background-image: url("./images/background.jpg");
   background-position-x: -400px;
-  transform: scale(.8);
+  /** yeah **/
+  transform: scale(.7);
+  margin-top: 200px;
 }
 
 td {
@@ -28,6 +30,9 @@ td {
   position: absolute;
   left: 0;
   top: 20%;
+  /** yeah **/
+  top: 40%;
+  margin-top: 200px;
   right: 0;
   margin-left: auto;
   margin-right: auto;
