--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,6 @@ td {
   min-width: 135px;
   z-index: -1;
   top: 0;
-  right: 45px;
   /*
   right: 45px;
   */
@@ -573,6 +572,7 @@ td {
 	background-image: -moz-linear-gradient(bottom,#000080,#4787ED); */
 
   background-image: url(images/menu_background_hover.png);
+
 }
 
 .menu-item {
@@ -588,6 +588,10 @@ td {
   width: 90px;
   max-width: 90px;
   overflow: hidden;
+  background-color: #6e0707;
+}
+.menu-item:hover {
+  background-color: #912020;
 }
 
 .die {
