--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
   min-width: 1075px;
   background-image: url("./images/background.jpg");
   background-position-x: -400px;
+
+
+  transform: scale(.9);
 }
 
 td {
