--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,9 @@ body {
   background-image: url("./images/background.jpg");
   background-position-x: -400px;
 
-
+/*
   transform: scale(.9);
+  */
 }
 
 td {
