--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,8 @@ body {
   background-image: url("./images/background.jpg");
   background-position-x: -400px;
 
-/*
+
   transform: scale(.9);
-  */
 }
 
 td {
@@ -30,7 +29,12 @@ td {
   */
   position: absolute;
   left: 0;
+  /*
   top: 20%;
+  */
+  top: 40%;
+  margin-top: 350px;
+
   right: 0;
   margin-left: auto;
   margin-right: auto;
