--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,10 @@ body {
   background-position-x: -400px;
 
 
-  transform: scale(.9);
 }
-
+#board, #control, #popup {
+  transform: scale(.85);
+}
 td {
   font-size: 12px;
   font-family: arial, sans-serif;
@@ -29,11 +30,8 @@ td {
   */
   position: absolute;
   left: 0;
-  /*
+  
   top: 20%;
-  */
-  top: 40%;
-  margin-top: 350px;
 
   right: 0;
   margin-left: auto;
@@ -85,8 +83,8 @@ td {
 #moneybarwrap {
   position: absolute;
   min-width: 135px;
-  top: 10px;
-  left: 970px;
+  top: 80px;
+  left: 920px;
   -webkit-user-select: none;
   user-select: none;
 }
