--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   background: #000000;
   margin: 0px;
   min-width: 1075px;
-  background-image: url("./images/background1.jpg");
+  background-image: url("./images/Box--Pattern.png");
   /*
   background-position-x: -400px;
   */
